# workout

./: Cargo.toml  Makefile.toml  build.sh  index.css  index.html  timer.css
lib/: main.js
pkg/: package.js  package.json  package_bg.wasm
src/: audio.rs  config_view.rs  icons.rs  lib.rs  main.rs  msg.rs  persistence.rs  play_view.rs  routine.rs  sample.rs  style.rs
src/components/: mod.rs  routine_table.rs  timer.rs
