[package]
name = "workout"
version = "0.1.0"
authors = ["Thorsten Lorenz <thlorenz@gmx.de>"]
edition = "2018"

[dependencies]
iced = { version ="0.2", features=["debug"] }
serde = { version = "1.0.123", features= ["derive"] }
serde_json = "1.0.62"
regex = "1.4.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.9.0"
directories-next = "2.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-timer = "0.2.5"
